refactor(health): refactor health
