# docs/tsp-output/@typespec/openapi3/openapi.api.Health.1.0.yaml
@@ -39,15 +39,20 @@ components:
       type: object
       required:
         - server
+        - version
         - mongoState
         - redisState
         - postgresState
+        - network
         - memory
         - cpu
       properties:
         server:
           type: string
-          description: 'server status: **UP** | **DOWN** '
+          description: 'application status: **UP** | **DOWN** '
+        version:
+          type: string
+          description: application version
         mongoState:
           type: string
           description: 'mongo status: **UP** | **DOWN** '
@@ -57,6 +62,28 @@ components:
         postgresState:
           type: string
           description: 'postgres status: **UP** | **DOWN** '
+        network:
+          type: object
+          properties:
+            latency:
+              type: string
+              description: |2-
+                    -- representing the network latency --
+                  latency: ** <20  ** status: ** Excellent **
+
+                  latency: ** <100 ** status: ** Acceptable **
+
+                  latency: ** <300 ** status: ** Poor **
+
+                  latency: ** >300 ** status: ** Critical ** 
+            connections:
+              type: integer
+              format: int32
+              description: representing the active connections count
+          required:
+            - latency
+            - connections
+          description: network information
         memory:
           type: object
           properties:
